Test/git-issues/git-issue-621.dfy.expect
git-issue-621.dfy(12,8): Error: static non-ghost const field 'MyData' of type 'M.D' (which does not have a default compiled value) must give a defining value
1 resolution/type errors detected in git-issue-621.dfy
